--- a/recruiter/recruit_app/static/css/page_form.css
+++ b/recruiter/recruit_app/static/css/page_form.css
@@ -1,20 +1,18 @@
+html {
+    /* position: relative; */
+    height: 100%;
+}
+
 body {
-    background-color: #800020
+    /* height: 100%; */
+    background: repeating-linear-gradient(45deg, rgba(255,212,71,1) 0%, rgba(255,212,71,1) 25%, rgba(255,255,255,1) 49%, rgba(128,0,32,1) 75%, rgba(128,0,32,1) 100%);
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-body:after {
-    top:0;
-    left:0;
-    width:50%;
-    height:100%;
-    position:absolute;
-    z-index:-1;
-    background-color: #D4AF37;
-    content:"";
-}
-
-.navbar {
-    background:#FFFFFF;
+.navbar{
+    min-height:50px;
 }
 .navbar-brand {
     color: #000000;
@@ -32,14 +30,9 @@ body:after {
 .nav-link:hover {
     color: #D4AF37;
 }
-.navbar-collapse {
-    justify-content: flex-end;
-}
-
 
 .overlay {
     position: absolute;
-    /* min-height: 50%; */
     min-width: 40%;
     left: 50%;
     top: 50%;
@@ -48,21 +41,21 @@ body:after {
     border-radius: 1em;
 }
 
-
 @media (max-width: 575.98px) {
     .overlay {
         position: absolute;
-        margin-top: 6em;
+        min-height: 50%;
         min-width: 90%;
+        max-width: 90%;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
         background: #FFFFFF;
         border-radius: 1em;
+        margin-top: 50px;
+        margin-bottom: 15px;
     }
 }
-
-
 
 .overlay h3,
 .program_label{
@@ -72,7 +65,7 @@ body:after {
 
 
 .prompt{
-    margin-left: 1em;
+    /* margin-left: 1em; */
     margin-top: 1em;
 }
 .prompt h4{
